Update kode kalkulator diskon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Kalkulator Diskon | Dibuat oleh [Ara] </p>
+        <p>&copy; 2025 Kalkulator Diskon . Semua Hak Dilindungi. </p>
     </footer>
 </body>
 </html>
