Update kode kalkulator diskon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form action="#">
             <div class="input-item">
                 <label for="amount"> Harga Asli : </label>
-                <input type="text" id="amount" placeholder="Rp">
+                <input type="number" id="amount" placeholder="Rp">
             </div>
 
             <div class="input-item">
